--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<label class="checkbox inline">
 					<input type="checkbox" name="outside" checked value="1">outside of declarations</label>
 				<label class="checkbox inline">
-					<input type="checkbox" name="inside" value="1">inside fo declarations</label>
+					<input type="checkbox" name="inside" value="1">inside of declarations</label>
 			</div>
 		</div>
 		<div class="control-group span3">
