handle data URL

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <div class="navbar navbar-fixed-top">
 	<div class="navbar-inner">
 		<div class="container">
+			<span class="pull-right github-buttons">
+				<iframe src="https://ghbtns.com/github-btn.html?user=yulanggong&repo=Least&type=star&count=false&v=2" frameborder="0" scrolling="0" width="60px" height="20px"></iframe>
+				<iframe src="https://ghbtns.com/github-btn.html?user=yulanggong&repo=Least&type=fork&count=false&v=2" frameborder="0" scrolling="0" width="60px" height="20px"></iframe>
+			</span>
 			<a class="brand" href="javascrit:;">Least</a>
 			<p class="navbar-text">Least helps you move from your old-fashioned CSS files to something shiny: CSS pre-processors!</p>
 		</div>
@@ -37,7 +41,7 @@
 		</div>
 		<div class="span12">
 			<div class="alert">
-				<strong>Warning!</strong> Known issues with <code>@media</code> queries and data URIs.
+				<strong>Warning!</strong> Known issues with <code>@</code> rules.
 			</div>
 		</div>
 	</div>
@@ -82,5 +86,6 @@
 </div>
 <script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 </html>
