ghbtns show count

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<div class="navbar-inner">
 		<div class="container">
 			<span class="pull-right github-buttons">
-				<iframe src="https://ghbtns.com/github-btn.html?user=yulanggong&repo=Least&type=star&count=false&v=2" frameborder="0" scrolling="0" width="58px" height="20px"></iframe>
-				<iframe src="https://ghbtns.com/github-btn.html?user=yulanggong&repo=Least&type=fork&count=false&v=2" frameborder="0" scrolling="0" width="58px" height="20px"></iframe>
+				<iframe src="https://ghbtns.com/github-btn.html?user=yulanggong&repo=Least&type=star&count=true&v=2" frameborder="0" scrolling="0" width="85px" height="20px"></iframe>
+				<iframe src="https://ghbtns.com/github-btn.html?user=yulanggong&repo=Least&type=fork&count=true&v=2" frameborder="0" scrolling="0" width="85px" height="20px"></iframe>
 			</span>
 			<a class="brand" href="javascrit:;">Least</a>
 			<p class="navbar-text">Least helps you move from your old-fashioned CSS files to something shiny: CSS pre-processors!</p>
